# OOBEBypass

./: .gitignore  CMakeLists.txt  README.md  build_msvc.bat  build_msys2_mingw64.bat
include/internal/: config.h  internal.h
include/oobebypass/: oobebypass.h
src/: app.manifest  elevated.c  font.c  main.c  paint.c  resource.rc  restart.c
src/internal/: config.c
